Upload and download

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+    .navbar {
+    margin-bottom: 0px
+  }
+  </style> 
 </head>
 <body>
   <nav class="navbar navbar-inverse">
@@ -29,7 +34,7 @@
           </li> -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-upload"></span> Cargar </a></li>
+          <li><a href="uploadCSV"><span class="glyphicon glyphicon-upload"></span> Cargar </a></li>
           <!-- <li><a href="/getCSV"><span id="downdload" class="glyphicon glyphicon-download-alt"></span> Descargar </a></li> -->
         </ul>
       </div>
