--- a/templates/map.html
+++ b/templates/map.html
@@ -10,7 +10,10 @@
         <title> My Google Map </title>
         <style> 
                 html { height: 100% }
-                body { height: 90%; margin: 0px; padding: 0px; font-family: "Lato", sans-serif }
+                body { height: 100%; margin: 0px; padding: 0px; font-family: "Lato", sans-serif }
+                .navbar {
+                    margin-bottom: 0px
+                }
         </style>
         {{mymap.js}}
     </head>
@@ -36,13 +39,13 @@
                     </li> -->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-upload"></span> Cargar </a></li>
+                    <li><a href="/uploadCSV"><span class="glyphicon glyphicon-upload"></span> Cargar </a></li>
                     <li><a href="/getCSV"><span id="download" class="glyphicon glyphicon-download-alt"></span> Descargar </a></li>
                 </ul>
                 </div>
             </div>
         </nav>
-        {{mymap.html}}
+    {{mymap.html}}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
