--- a/templates/index.html
+++ b/templates/index.html
@@ -53,28 +53,28 @@
   <div class="form-group">
     <label class="control-label col-sm-2" for="populationSize"> Cantidad de individuos por islas:</label>
     <div class="col-sm-10">          
-      <input type="number" class="form-control" id="populationSize" placeholder="Ingrese el tamaño para cada poblacion" name="populationSize">
+      <input type="number" class="form-control" id="populationSize" placeholder="Ingrese el tamaño para cada poblacion" name="populationSize" value = "10000"> 
     </div>
   </div>
 
   <div class="form-group">
     <label class="control-label col-sm-2" for="numGenerations"> Número de generaciones: </label>
     <div class="col-sm-10">          
-      <input type="number" class="form-control" id="numGenerations" placeholder="Ingrese el numero de generaciones" name="numGenerations">
+      <input type="number" class="form-control" id="numGenerations" placeholder="Ingrese el numero de generaciones" name="numGenerations" value = "50">
     </div>
   </div>
 
   <div class="form-group">
       <label class="control-label col-sm-2" for="tournamentSize"> Tamaño del torneo: </label>
       <div class="col-sm-10">          
-        <input type="number" class="form-control" id="tournamentSize" placeholder="Ingrese el tamaño del torneo" name="tournamentSize">
+        <input type="number" class="form-control" id="tournamentSize" placeholder="Ingrese el tamaño del torneo" name="tournamentSize" value="100">
       </div>
   </div>
 
   <div class="form-group">
       <label class="control-label col-sm-2" for="numSurvivors"> Numero de sobrevivientes del torneo: </label>
       <div class="col-sm-10">          
-        <input type="number" class="form-control" id="numSurvivors" placeholder="Ingrese la cantidad de supervivientes para el torneo" name="numSurvivors">
+        <input type="number" class="form-control" id="numSurvivors" placeholder="Ingrese la cantidad de supervivientes para el torneo" name="numSurvivors" value="10">
       </div>
   </div>
 
@@ -102,7 +102,7 @@
   <div class="form-group">
       <label class="control-label col-sm-2" for="numSolutions"> Numero de soluciones </label>
       <div class="col-sm-10">          
-        <input type="number" class="form-control" id="numSolutions" placeholder="Ingrese el numero de soluciones" name="numSolutions">
+        <input type="number" class="form-control" id="numSolutions" placeholder="Ingrese el numero de soluciones" name="numSolutions" value="1">
       </div>
   </div>
 
