--- a/templates/index.html
+++ b/templates/index.html
@@ -47,55 +47,55 @@
     <div class="form-group">
     <label class="control-label col-sm-2" for="numPopulation">Número de islas:</label>
     <div class="col-sm-10">
-      <input type="number" class="form-control" id="numPopulation" placeholder="Ingrese el numero de poblaciones" name="numPopulation">
+      <input type="number" class="form-control" id="numPopulation" placeholder="Ingrese el numero de poblaciones" name="numPopulation" value = "5">
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="populationSize"> Cantidad de individuos por islas:</label>
     <div class="col-sm-10">          
-      <input type="number" class="form-control" id="populationSize" placeholder="Ingrese el tamaño para cada poblacion" name="populationSize" value = "1000"> 
+      <input type="number" class="form-control" id="populationSize" placeholder="Ingrese el tamaño para cada poblacion" name="populationSize"  value = "719">  
     </div>
   </div>
 
   <div class="form-group">
     <label class="control-label col-sm-2" for="numGenerations"> Número de generaciones: </label>
     <div class="col-sm-10">          
-      <input type="number" class="form-control" id="numGenerations" placeholder="Ingrese el numero de generaciones" name="numGenerations" value = "50">
+      <input type="number" class="form-control" id="numGenerations" placeholder="Ingrese el numero de generaciones" name="numGenerations" value = "94">
     </div>
   </div>
 
   <div class="form-group">
       <label class="control-label col-sm-2" for="tournamentSize"> Tamaño del torneo: </label>
       <div class="col-sm-10">          
-        <input type="number" class="form-control" id="tournamentSize" placeholder="Ingrese el tamaño del torneo" name="tournamentSize" value="100">
+        <input type="number" class="form-control" id="tournamentSize" placeholder="Ingrese el tamaño del torneo" name="tournamentSize"  value = "681">
       </div>
   </div>
 
   <div class="form-group">
       <label class="control-label col-sm-2" for="numSurvivors"> Numero de sobrevivientes del torneo: </label>
       <div class="col-sm-10">          
-        <input type="number" class="form-control" id="numSurvivors" placeholder="Ingrese la cantidad de supervivientes para el torneo" name="numSurvivors" value="10">
+        <input type="number" class="form-control" id="numSurvivors" placeholder="Ingrese la cantidad de supervivientes para el torneo" name="numSurvivors" value="352">
       </div>
   </div>
 
   <div class="form-group">
-      <label class="control-label col-sm-2" for="pMutation"> Probabilidad de mutacion: </label>
+      <label class="control-label col-sm-2" for="pMutation"> Probabilidad de mutación: </label>
       <div class="col-sm-10">          
-        <input type="number" class="form-control" id="pMutation" placeholder="Ingrese la probabiblidad de mutacion" name="pMutation" min="0" max="1" step="0.01" value="0.01">
+        <input type="number" class="form-control" id="pMutation" placeholder="Ingrese la probabiblidad de mutacion" name="pMutation" min="0" max="1" step="0.0001" value="0.022">
       </div>
   </div>
 
   <div class="form-group">
-      <label class="control-label col-sm-2" for="pMigration"> Probabilidad de migracion: </label>
+      <label class="control-label col-sm-2" for="pMigration"> Probabilidad de migración: </label>
       <div class="col-sm-10">          
-        <input type="number" class="form-control" id="pMigration" placeholder="Ingrese la probabilidad de migracion" name="pMigration" min="0" max="1" step="0.01" value="0.15">
+        <input type="number" class="form-control" id="pMigration" placeholder="Ingrese la probabilidad de migracion" name="pMigration" min="0" max="1" step="0.001" value="0.498">
       </div>
   </div>
 
   <div class="form-group">
-    <label class="control-label col-sm-2" for="pMigrationPoblation"> Porcentage de poblacion  que puede migrar: </label>
+    <label class="control-label col-sm-2" for="pMigrationPoblation"> Porcentaje de población  que puede migrar: </label>
     <div class="col-sm-10">          
-      <input type="number" class="form-control" id="pMigrationPoblation" placeholder="Ingrese el porcentage de la poblacion migrable" name="pMigrationPoblation" min="0" max="100" step="1" value="5">
+      <input type="number" class="form-control" id="pMigrationPoblation" placeholder="Ingrese el porcentage de la poblacion migrable" name="pMigrationPoblation" min="0" max="10" step="1" value="4">
     </div>
 </div>
 
