--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,12 @@
   <title> Algoritmo Genetico </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="http://127.0.0.1:5000/static/mapicon.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="static/loading.js"></script>
-  <link rel="stylesheet" type="text/css" href="static/stylesheet.cs"></script>
+  <link rel="stylesheet" type="text/css" href="static/stylesheet.cs">
 </head>
 <body>
   <nav class="navbar navbar-inverse">
