--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
   <title> Algoritmo Genetico </title>
+  <link rel="icon" href="http://127.0.0.1:5000/static/mapicon.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
