--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="#">Proyecto</a>
+        <a class="navbar-brand" href="/">Proyecto</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Inicio</a></li>
+          <li class="active"><a href="/">Inicio</a></li>
           <!-- <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -112,7 +112,7 @@
     </div>
 
     <div class="col-sm-offset-2 col-sm-10">
-        <button id="opciones" type="submit" class="btn btn-success"> Mas opciones </button>
+        <button id="opciones" type="submit" class="btn btn-warning"> Opciones Avanzadas </button>
     </div>
   </div>
   </form>
